--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <link rel="shortcut icon" href="./img/p.jpg" type="image/x-icon">
 <link rel="stylesheet" href="./index.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2863445768054087"
+     crossorigin="anonymous"></script>
     <title>Portfolio</title>
 </head>
 <body>
