--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" href="./index.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2863445768054087"
      crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-2863445768054087">
     <title>Portfolio</title>
 </head>
 <body>
