--- a/certi.html
+++ b/certi.html
@@ -10,6 +10,7 @@
 <link rel="shortcut icon" href="./img/p.jpg" type="image/x-icon">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2863445768054087"
      crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-2863445768054087">
 <link rel="stylesheet" href="./ceri.css">
 <title>Portfolio</title>
 </head>
