--- a/skills.html
+++ b/skills.html
@@ -127,5 +127,17 @@
           2 days ago
         </div>
       </div>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2863445768054087"
+     crossorigin="anonymous"></script>
+<!-- Suggestion Contents -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-2863445768054087"
+     data-ad-slot="7436781471"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </body>
 </html>
