--- a/index.html
+++ b/index.html
@@ -116,6 +116,18 @@
             <button class="btn btn-primary" type="button"><a href="">Details</a></button>
           </div>
         </div>
+          <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2863445768054087"
+     crossorigin="anonymous"></script>
+<!-- Suggestion Contents -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-2863445768054087"
+     data-ad-slot="7436781471"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
         <div class="card-footer text-muted">
           2 days ago
         </div>
