--- a/index.html
+++ b/index.html
@@ -128,6 +128,17 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+          <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2863445768054087"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-2863445768054087"
+     data-ad-slot="9199868405"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
         <div class="card-footer text-muted">
           2 days ago
         </div>
