--- a/skills.html
+++ b/skills.html
@@ -19,6 +19,9 @@
     <title>Portfolio</title>
 </head>
 <body>
+    <amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-2863445768054087">
+</amp-auto-ads>
     <ul class="nav justify-content-center" id="text">
         <li class="nav-item">
           <a class="nav-link " aria-current="page" href="#box1">HTML</a>
