--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <title>Portfolio</title>
 </head>
 <body>
+    <amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-2863445768054087">
+</amp-auto-ads>
     <nav class="navbar navbar-expand-lg navbar-dark ">
         <a class="navbar-brand"href="#">Portfolio</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
