--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,9 @@
 <title>Portfolio</title>
 </head>
 <body>
+    <amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-2863445768054087">
+</amp-auto-ads>
     <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card h-100">
