--- a/certi.html
+++ b/certi.html
@@ -18,6 +18,9 @@
 <title>Portfolio</title>
 </head>
 <body>
+    <amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-2863445768054087">
+</amp-auto-ads>
     <h3>
         Certifications
         <small class="text-muted">ON Events</small>
