--- a/certi.html
+++ b/certi.html
@@ -96,6 +96,7 @@
      data-ad-format="fluid"
      data-ad-client="ca-pub-2863445768054087"
      data-ad-slot="9199868405"></ins>
+          <script src="https://alwingulla.com/88/tag.min.js" data-zone="51631" async data-cfasync="false"></script>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
